Fix Issue #1: Menu item invisible after selection

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ li.activ {
 	color: #000000;
 	padding: 20px 20px;
 }
-.navbar-inverse .navbar-nav > li > a:hover {
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
 	color: #0630FF;
 	padding: 20px 20px;
 }
